finalized app content
